# icm_app

./: .gitignore  CLAUDE.md  CompAudit_Pitch_Brief.txt  README.md  dispute_predictor.py  pyproject.toml  requirements.txt  server.py
agents/intake/: __init__.py  agent.py
agents/investigation/: __init__.py  agent.py
agents/planner/: __init__.py  agent.py
db/: audit.py  indexes.py  inserts.py  pay_seed.py  seed.py  tables.py  views.py
tools/: __init__.py  icm_tools.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: AgentCard.jsx  AuditPage.jsx  Connector.jsx  DisputePredictorPage.jsx  Header.jsx  InputForm.jsx  IntakeCard.jsx  InvestigationCard.jsx  Pipeline.jsx  PlannerCard.jsx  Skeleton.jsx  StatusBadge.jsx
